--- a/.gitattributes
+++ b/.gitattributes
@@ -1,4 +1,4 @@
-# Unity files (dripsim_game)
+﻿# Unity files (dripsim_game)
 dripsim_game/Assets/*.unity filter=lfs diff=lfs merge=lfs -text
 dripsim_game/Assets/*.prefab filter=lfs diff=lfs merge=lfs -text
 dripsim_game/Assets/*.asset filter=lfs diff=lfs merge=lfs -text
@@ -37,3 +37,26 @@ dripsim_docs/*.docx filter=lfs diff=lfs merge=lfs -text
 # Large Files
 *.zip filter=lfs diff=lfs merge=lfs -text
 *.rar filter=lfs diff=lfs merge=lfs -text
+
+dripsim_game/Assets/*.controller filter=lfs diff=lfs merge=lfs -text
+dripsim_game/Assets/*.physicMaterial filter=lfs diff=lfs merge=lfs -text
+dripsim_game/Assets/*.physicsMaterial2D filter=lfs diff=lfs merge=lfs -text
+
+dripsim_game/Assets/*.shader filter=lfs diff=lfs merge=lfs -text
+dripsim_game/Assets/*.compute filter=lfs diff=lfs merge=lfs -text
+
+dripsim_game/Assets/*.anim filter=lfs diff=lfs merge=lfs -text
+
+dripsim_game/Assets/*.exr filter=lfs diff=lfs merge=lfs -text
+dripsim_assets/*.exr filter=lfs diff=lfs merge=lfs -text
+
+dripsim_game/Assets/*.mp4 filter=lfs diff=lfs merge=lfs -text
+dripsim_assets/*.mp4 filter=lfs diff=lfs merge=lfs -text
+
+dripsim_game/Assets/*.lighting filter=lfs diff=lfs merge=lfs -text
+dripsim_game/Assets/*.lightmap filter=lfs diff=lfs merge=lfs -text
+
+dripsim_game/Assets/*.aar filter=lfs diff=lfs merge=lfs -text
+dripsim_game/Assets/*.framework filter=lfs diff=lfs merge=lfs -text
+
+dripsim_game/Assets/*.dotsettings filter=lfs diff=lfs merge=lfs -text
