Adiciona arquivos do projeto e remove a pasta .obsidian do controle de versão

--- a/.gitignore
+++ b/.gitignore
@@ -52,6 +52,9 @@ Desktop.ini
 /.vs/
 /.vscode/
 
+# Ignorar arquivos de configuração do Obsidian
+dripsim_docs/dripsim_vault/.obsidian/
+
 # Rider (optimized)
 **/.idea/*
 !**/.idea/codeStyles/
